[tool.poetry]
name = "encourage-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
ago = "^0.0.93"
disputils = "^0.1.3"
pymongo = "^3.11.3"
youtube-dl = "^2021.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
